[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/UI/TitleScreen/Buttons/NewGameButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Images/Titel_Farbe_Small.png" type="Texture" id=2]
[ext_resource path="res://Scenes/UI/VersionLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/TitleScreen/Buttons/OptionsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/ExitGameButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UI/TitleScreen/fade_in/FadeIn.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/UI/TitleScreen/TitleScreen.gd" type="Script" id=7]
[ext_resource path="res://Scenes/UI/OptionsMenu/OptionsMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/UI/HUD/hud.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/UI/TestingRoomButton.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "move_top_left"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1920, -1080 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/move_top_left = SubResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 60.0
margin_right = 1820.0
margin_bottom = 1020.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1720.0
margin_bottom = 67.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 71.0
margin_right = 1720.0
margin_bottom = 513.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 1720.0
margin_bottom = 442.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 1 )]
margin_top = 71.0
margin_right = 1720.0
margin_bottom = 131.0

[node name="TestingRoom" parent="Menu/CenterRow/Buttons" instance=ExtResource( 10 )]
margin_top = 151.0
margin_right = 1720.0
margin_bottom = 211.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 231.0
margin_right = 1720.0
margin_bottom = 291.0

[node name="ExitGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 311.0
margin_right = 1720.0
margin_bottom = 371.0

[node name="VersionLabel" parent="Menu" instance=ExtResource( 3 )]
margin_top = 517.0
margin_right = 1720.0
margin_bottom = 960.0

[node name="FadeIn" parent="." instance=ExtResource( 6 )]
visible = false

[node name="hud" parent="." instance=ExtResource( 9 )]
margin_bottom = 12.0
mouse_filter = 2

[node name="OptionsMenu" parent="." instance=ExtResource( 8 )]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
